--- a/package.json
+++ b/package.json
@@ -1,11 +1,9 @@
 {
   "name": "gestadata",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    
     "build-css": "sass assets/scss/origen.scss assets/css/destino.css",
     "watch-css": "nodemon -e scss -x \"npm run build-css\""
   },
@@ -22,5 +20,114 @@
   "devDependencies": {
     "nodemon": "^2.0.15",
     "sass": "^1.49.8"
-  }
+  },
+  "dependencies": {
+    "abbrev": "^1.1.1",
+    "ansi-align": "^3.0.1",
+    "binary-extensions": "^2.2.0",
+    "ansi-regex": "^5.0.1",
+    "brace-expansion": "^1.1.11",
+    "balanced-match": "^1.0.2",
+    "ansi-styles": "^4.3.0",
+    "anymatch": "^3.1.2",
+    "chalk": "^4.1.2",
+    "cacheable-request": "^6.1.0",
+    "chokidar": "^3.5.3",
+    "braces": "^3.0.2",
+    "color-name": "^1.1.4",
+    "boxen": "^5.1.2",
+    "crypto-random-string": "^2.0.0",
+    "debug": "^3.2.7",
+    "cli-boxes": "^2.2.1",
+    "concat-map": "^0.0.1",
+    "configstore": "^5.0.1",
+    "camelcase": "^6.3.0",
+    "deep-extend": "^0.6.0",
+    "duplexer3": "^0.1.4",
+    "clone-response": "^1.0.2",
+    "emoji-regex": "^8.0.0",
+    "glob-parent": "^5.1.2",
+    "color-convert": "^2.0.1",
+    "defer-to-connect": "^1.1.3",
+    "fill-range": "^7.0.1",
+    "ci-info": "^2.0.0",
+    "decompress-response": "^3.3.0",
+    "end-of-stream": "^1.4.4",
+    "graceful-fs": "^4.2.9",
+    "escape-goat": "^2.1.1",
+    "has-yarn": "^2.1.0",
+    "get-stream": "^4.1.0",
+    "http-cache-semantics": "^4.1.0",
+    "got": "^9.6.0",
+    "import-lazy": "^2.1.0",
+    "immutable": "^4.0.0",
+    "global-dirs": "^3.0.0",
+    "dot-prop": "^5.3.0",
+    "is-binary-path": "^2.1.0",
+    "is-ci": "^2.0.0",
+    "ini": "^2.0.0",
+    "imurmurhash": "^0.1.4",
+    "is-npm": "^5.0.0",
+    "is-extglob": "^2.1.1",
+    "has-flag": "^3.0.0",
+    "is-yarn-global": "^0.3.0",
+    "ignore-by-default": "^1.0.1",
+    "is-number": "^7.0.0",
+    "is-path-inside": "^3.0.3",
+    "is-fullwidth-code-point": "^3.0.0",
+    "json-buffer": "^3.0.0",
+    "lru-cache": "^6.0.0",
+    "keyv": "^3.1.0",
+    "lowercase-keys": "^1.0.1",
+    "mimic-response": "^1.0.1",
+    "is-typedarray": "^1.0.0",
+    "make-dir": "^3.1.0",
+    "ms": "^2.1.3",
+    "is-obj": "^2.0.0",
+    "nopt": "^1.0.10",
+    "latest-version": "^5.1.0",
+    "normalize-url": "^4.5.1",
+    "p-cancelable": "^1.1.0",
+    "package-json": "^6.5.0",
+    "prepend-http": "^2.0.0",
+    "pstree.remy": "^1.1.8",
+    "once": "^1.4.0",
+    "picomatch": "^2.3.1",
+    "is-installed-globally": "^0.4.0",
+    "is-glob": "^4.0.3",
+    "normalize-path": "^3.0.0",
+    "pump": "^3.0.0",
+    "minimatch": "^3.1.2",
+    "registry-auth-token": "^4.2.1",
+    "rc": "^1.2.8",
+    "readdirp": "^3.6.0",
+    "responselike": "^1.0.2",
+    "semver-diff": "^3.1.1",
+    "pupa": "^2.1.1",
+    "registry-url": "^5.1.0",
+    "minimist": "^1.2.5",
+    "strip-ansi": "^6.0.1",
+    "source-map-js": "^1.0.2",
+    "to-readable-stream": "^1.0.0",
+    "touch": "^3.1.0",
+    "semver": "^5.7.1",
+    "signal-exit": "^3.0.7",
+    "supports-color": "^5.5.0",
+    "string-width": "^4.2.3",
+    "url-parse-lax": "^3.0.0",
+    "undefsafe": "^2.0.5",
+    "typedarray-to-buffer": "^3.1.5",
+    "type-fest": "^0.20.2",
+    "wrap-ansi": "^7.0.0",
+    "unique-string": "^2.0.0",
+    "wrappy": "^1.0.2",
+    "to-regex-range": "^5.0.1",
+    "strip-json-comments": "^2.0.1",
+    "widest-line": "^3.1.0",
+    "xdg-basedir": "^4.0.0",
+    "yallist": "^4.0.0",
+    "write-file-atomic": "^3.0.3",
+    "update-notifier": "^5.1.0"
+  },
+  "description": ""
 }
