--- a/package.json
+++ b/package.json
@@ -129,5 +129,5 @@
     "write-file-atomic": "^3.0.3",
     "update-notifier": "^5.1.0"
   },
-  "description": ""
+  "description": "empresa que presta servicios de data analytics para organizaciones que lo necesiten"
 }
